--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "ts-node-dev": "^2.0.0",
     "validator": "^13.11.0",
